--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="rps.js"></script>
+    
 </head>
 <body>
-    
+    <div class="player choices">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <div id="result"></div>
+    <div id="gameScore"></div>
+
+    <script src="rps.js"></script>
 </body>
 </html>
