--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="player choices">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+    <h1>Rock Paper Scissors</h1>
+    <div class="container">
+        <ul class="playerChoices">
+            <li><button id="rock" class="btn"><img src="./img/rock.png" alt=""></button></li>
+            <li><button id="paper" class="btn"><img src="./img/paper.png" alt=""></button></li>
+            <li><button id="scissors" class="btn"><img src="./img/scissors.png" alt=""></button></li>
+        </ul>
+        <div class="result-wrapper">
+            <div id="result"></div>
+            <div id="gameScore"></div>
+        </div>
     </div>
-    <div id="result"></div>
-    <div id="gameScore"></div>
+    
 
     <script src="rps.js"></script>
 </body>
